--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "@jmondi/oauth2-server": "^3.0.2",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "mqtt": "^5.3.2",
-    "node-oauth2-server": "^2.4.0",
+    "qs": "^6.11.2",
     "telldus-api": "^1.0.4"
   }
 }
