--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "MosGuitto-Server"
+name = "mosguitto_server"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,7 +9,9 @@ edition = "2021"
 paho-mqtt = "0.12.3"
 #bincode = "1.3.3"
 picovoice = "3.0.2"
-#actix-web = "4"
+actix = "0.13.1"
+actix-web = "4.4.1"
+actix-web-actors = "4.2"
 rand = "0.8.5"
 
 
@@ -18,7 +20,7 @@ rand = "0.8.5"
 #features = ["auto-initialize"]
 
 [dependencies.tokio]
-features = ["full"]
+features = ["net", "time", "macros", "rt-multi-thread"]
 version = "1.21.1"
 
 [dependencies.serde_json]
