--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ paho-mqtt = "0.12.3"
 picovoice = "3.0.2"
 actix = "0.13.1"
 actix-web = "4.4.1"
+async-stream = "0.3.5"
 actix-web-actors = "4.2"
 rand = "0.8.5"
 
